# evo

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
plugins/evo/: LICENSE  NOTICE  README.md  pyproject.toml
plugins/evo/.claude-plugin/: plugin.json
plugins/evo/.codex-plugin/: plugin.json
plugins/evo/skills/discover/: SKILL.md
plugins/evo/skills/discover/references/: constructing-benchmark.md  inline_instrumentation.js  inline_instrumentation.py  sdk_node.js  sdk_python.py
plugins/evo/skills/discover/scripts/: validate_result.py
plugins/evo/skills/infra-setup/: SKILL.md
plugins/evo/skills/infra-setup/references/: aws-auth-prompt.md  daytona-auth-prompt.md  e2b-auth-prompt.md  hetzner-auth-prompt.md  modal-auth-prompt.md  provider-matrix.md  provider-troubleshooting.md  ssh-auth-prompt.md
plugins/evo/skills/optimize/: SKILL.md
plugins/evo/skills/subagent/: SKILL.md
plugins/evo/src/evo/: __init__.py  cli.py  core.py  dashboard.py  dispatch.py  frontier_strategies.py  git_bundle.py  locking.py  sandbox_client.py  scratchpad.py  workspace_executor.py
plugins/evo/src/evo/backends/: __init__.py  pool.py  pool_state.py  protocol.py  remote.py  remote_state.py  worktree.py
plugins/evo/src/evo/backends/sandbox_providers/: __init__.py  _common.py  aws.py  cloudflare.py  daytona.py  e2b.py  hetzner.py  manual.py  modal.py  ssh.py
plugins/evo/src/evo/hosts/: __init__.py  claude_fork.py
plugins/evo/src/evo/static/: app.js  index.html  style.css
plugins/evo/tests/: test_dashboard_frontier_strategy.py  test_dispatch.py  test_dispatch_live_claude.py  test_frontier_strategies.py  test_inline_instrumentation.py
scripts/: check_versions.py  dashboard.py  evo  graph.py  scratchpad.py
sdk/python/: README.md  pyproject.toml
sdk/python/src/evo_agent/: __init__.py  _backend.py  _gate.py  _run.py
sdk/python/src/evo_sdk/: __init__.py  _gate.py  _run.py
sdk/python/test/: test_run.py
src/evo/: cli.py  (+5 more)
tests/: _sandbox_agent_fixture.py  e2e.py  e2e_dispatch.py  e2e_lineage.py  e2e_pool.py  integ_remote_localhost.py  live_modal_provider.py  live_remote_agent_modal.py  live_remote_aws_end_to_end.py  live_remote_cloudflare_end_to_end.py  live_remote_daytona_end_to_end.py  live_remote_e2b_end_to_end.py  live_remote_hetzner_end_to_end.py  live_remote_modal_end_to_end.py  unit_remote_skeleton.py  unit_sandbox_client.py
(+42 files in other folders)
