[project]
name = "evo-hq-cli"
version = "0.3.2"
description = "Structured experiment-driven code optimization with git worktrees, traces, and a local dashboard. CLI for the evo plugin (Claude Code, Codex)."
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
readme = "README.md"
dependencies = [
  "flask>=3.0.0",
  "portalocker>=2.8.0",
  "pyyaml>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/evo-hq/evo"
Repository = "https://github.com/evo-hq/evo"
Issues = "https://github.com/evo-hq/evo/issues"

[project.scripts]
evo = "evo.cli:main"
evo-dashboard = "evo.dashboard:main"

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
evo = ["static/*"]
